@@ -1,0 +1,4 @@
+---
+Checks:          'clang-diagnostic-*,clang-analyzer-*,bugprone-*,cert-*,clang-analyzer-*,clang-analyzer-*,llvm-*,misc-*,modernize-*,performance-*,readability-*,-modernize-make-unique,-modernize-use-trailing-return-type,-misc-non-private-member-variables-in-classes,-readability-named-parameter,-readability-qualified-auto,-llvm-qualified-auto,-readability-magic-numbers'
+WarningsAsErrors: '*'
+FormatStyle:     file
